add CF and EP and scripts